--- a/HtmlCssBootstrap/index.html
+++ b/HtmlCssBootstrap/index.html
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>Task</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#start">Start Bootstrap</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header id=start class="bg-primary bg-gradient text-white" style="padding: 75px 0px ;">
+      <div class="container py-5 text-center">
+        <h1 class="fw-bolder">Welcome to Scrolling Nav</h1>
+        <p class="lead">
+          A functional Bootstrap 5 boilerplate for one page scrolling websites
+        </p>
+        <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
+      </div>
+    </header>
+
+    <div id=about class="container" style="padding: 140px 0px ;">
+      <div class="row gx-4 justify-content-center">
+        <div class="col-lg-8">
+          <h2>About this page</h2>
+          <p class="lead">
+            This is a great place to talk about your webpage. This template is
+            purposefully unstyled so you can use it as a boilerplate or starting
+            point for you own landing page designs! This template features:
+          </p>
+          <ul>
+            <li>Clickable nav links that smooth scroll to page sections</li>
+            <li>
+              Responsive behavior when clicking nav links perfect for a one page
+              website
+            </li>
+            <li>
+              Bootstrap's scrollspy feature which highlights which section of
+              the page you're on in the navbar
+            </li>
+            <li>
+              Minimal custom CSS so you are free to explore your own unique
+              design options
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div id=services class="container" style="padding: 140px 0px ;"">
+      <div class="row gx-4 justify-content-center">
+        <div class="col-lg-8">
+          <h2>Services we offer</h2>
+          <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio
+            velit inventore, expedita quo laboriosam possimus ea consequatur
+            vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore
+            ut velit dignissimos.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div id= contact class="container" style="padding: 140px 0px ;">
+      <div class="row gx-4 justify-content-center">
+          <div class="col-lg-8">
+              <h2>Contact us</h2>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+          </div>
+      </div>
+  </div>
+  <footer class="bg-dark py-5">
+    <div class="container"><p class="m-0 text-center text-white">Copyright © Your Website 2023</p></div>
+  </footer>
+  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
