--- a/ApiConnection/index.html
+++ b/ApiConnection/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body style="background-image: url('foto.jpg') ;background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#start">BB207</a>
